<?xml version="1.0"?>
<package format="3">
  <name>ouster_description</name>
  <version>0.1.0</version>
  <description>The ouster_description package</description>
  <maintainer email="s.subramanian1@tue.nl">Saruabh Subramanian</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
</package>

